# GB

./: main  main.cpp
I/1_C++/: main.c  test.txt
I/1_C++/dz2/: lesson2  lesson2.cpp
I/1_C++/dz4/: lesson4  lesson4.cpp  натуральное число.cpp
I/1_C++/dz6/: a.txt  b.txt  lesson6  lesson6.cpp  out.txt
I/1_C++/dz7/: lesson7  lesson7.cpp
I/2 Курс Linux/: Linux2.odt  Linux3.odt  Linux4.odt  Linux5.odt  Linux6.odt  Linux7.odt  Linux8.odt  Linux_1.odt
I/3_Курс_Алгоритмы/10_alg/: alg_10.c
I/3_Курс_Алгоритмы/12_alg/: alg_12++.c  all.c
I/3_Курс_Алгоритмы/13_alg/: alg_13.c
I/3_Курс_Алгоритмы/14_alg/: alg_14.c  all2.c
I/3_Курс_Алгоритмы/15_alg/: Без имени 1.odt
I/3_Курс_Алгоритмы/2 alg/: Algorithms_1.odg  main.c
I/3_Курс_Алгоритмы/3_alg/: alg_3.c  alg_3.odg  alg_3_2.odg
I/3_Курс_Алгоритмы/4_alg/: alg_4.c
I/3_Курс_Алгоритмы/6_alg/: alg_6.c
I/3_Курс_Алгоритмы/7_alg/: alg_7.c
I/3_Курс_Алгоритмы/work files/: Bracker.c  alg7.c  alg_3.c  arrays.c  g.c  geek.c  geek.h  is sort l.c  m tree.c  main.c  main4.c
II/4_oop/: BJ.cpp  main8.cpp  n8.cpp
II/4_oop/oop_1/: dinamic.cpp  oop_2.cpp  static.cpp
II/4_oop/oop_2/: oop_2.cpp
II/4_oop/oop_3/: oop3.cpp
II/4_oop/oop_4/: oop4.cpp
II/4_oop/oop_8/: oop_8.cpp  robot.cpp
II/5_Сети/DZ_1/: DZ_1.odt  L1.pkt
II/5_Сети/DZ_2/: DZ_2.odt  OSI2hw.pkt
II/5_Сети/DZ_3/: DZ_3.odt  DZ_3.pkt  Домашнее задание 3.pkt
II/5_Сети/DZ_4/: DZ_4.odt  Домашнее задание 4.pkt  Домашнее задание 4_1.pkt
II/6_CppHardMoments/Lesson7/: CMakeLists.txt  Students.pb.cc  Students.pb.h  Students.proto  main.cpp
(+72 files in other folders)
